k8s/apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nginx
  name: nginx
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: nginx
